kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project
spec:
  selector:
    app: project
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
