kubernetes/ingress-fanout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fanout
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/ssl-services: "project"
spec:
  tls:
    - hosts:
      - www.mycoolapp.mydomain.com
      secretName: tls-certificate
  rules:
  - host: www.mycoolapp.mydomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: project
          servicePort: 80
